--- a/RiddhiBookStore/Areas/Views/Shared/_Layout.cshtml
+++ b/RiddhiBookStore/Areas/Views/Shared/_Layout.cshtml
@@ -27,8 +27,9 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link btn btn-danger dropdown-toggle"  data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Action</a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
+                               @* <a class="dropdown-item" href="#">Action</a>*@
                                 <a class="dropdown-item" href="#">Another action</a>
                                 <a class="dropdown-item" href="#">Something else here</a>
                                 <div class="dropdown-divider"></div>
@@ -36,6 +37,7 @@
                             </div>
                         </li>
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
