--- a/RiddhiBookStore/Areas/Admin/Views/Category/Upsert.cshtml
+++ b/RiddhiBookStore/Areas/Admin/Views/Category/Upsert.cshtml
@@ -1,10 +1,16 @@
-﻿
+﻿@model RiddhiBooks.Models.Category;
 @{
     ViewData["Title"] = "Upsert";
+    var title = "Create Category";
 }
 
 <form method="post">
     <div class="row p-3 border">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        @if (Model.Id != 0)
+        {
+            title = "Edit Category";
+        }
         <div class="col-12 border-bottom">
             <h2 class="text-primary">TITLE</h2>
         </div>
@@ -19,7 +25,14 @@
             </div>
             <div class="form-group row">
                 <div class="col-8 offset-4">
-                    EDIT | BACK
+                    @if (Model.Id != 0)
+                    {
+                        <partial name="_EditAndBackToListbutton" model="Model.Id" />
+                    }
+                    else
+                    {
+                        <partial name="_CreateAndBackToListButton" />
+                    }
                 </div>
             </div>
         </div>
