--- a/RiddhiBookStore/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/RiddhiBookStore/Areas/Admin/Views/Product/Upsert.cshtml
@@ -135,6 +135,12 @@
                     }
                 </div>
             </div>
+            @if (Model.Product.Id != 0)
+            {
+                <div class="col-3 offset-1 pt-4">
+                    <img src="@Model.Product.ImageUrl" width="100%" style="border-radius:5px; border:1px solid #bbb9b9" />
+                </div>
+            }
         </div>
     </div>
 </form>
